--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -56,7 +56,7 @@ const formattedDate = new Date(article.data.publishDate).toLocaleDateString('en-
       />
     )}
     
-    <div class="prose prose-lg mx-auto max-w-4xl dark:prose-invert">
+    <div class="prose prose-lg mx-auto max-w-4xl prose-gray dark:prose-invert">
       <Content />
     </div>
   </article>
