--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 import ArticleCard from '../components/ArticleCard.astro';
 import { getCollection } from 'astro:content';
 import { getUrl } from '../utils/links';
+import { getReadingTime } from '../utils/readingTime';
 
 const allArticles = await getCollection('articles', ({ data }) => {
   return data.draft !== true;
@@ -11,6 +12,14 @@ const allArticles = await getCollection('articles', ({ data }) => {
 const recentArticles = allArticles
   .sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
   .slice(0, 6);
+
+// Calculate reading time for each article
+const articlesWithReadingTime = await Promise.all(
+  recentArticles.map(async (article) => ({
+    ...article,
+    readingTime: await getReadingTime(article)
+  }))
+);
 ---
 
 <BaseLayout title="Home">
@@ -67,7 +76,7 @@ const recentArticles = allArticles
       </div>
       
       <div class="grid gap-8 md:grid-cols-2 lg:grid-cols-3">
-        {recentArticles.map((article) => (
+        {articlesWithReadingTime.map((article) => (
           <ArticleCard
             title={article.data.title}
             description={article.data.description}
@@ -76,6 +85,7 @@ const recentArticles = allArticles
             tags={article.data.tags}
             slug={article.slug}
             image={article.data.image}
+            readingTime={article.readingTime.text}
           />
         ))}
       </div>
