--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -2,6 +2,7 @@
 import BaseLayout from '../../layouts/BaseLayout.astro';
 import ArticleCard from '../../components/ArticleCard.astro';
 import { getCollection } from 'astro:content';
+import { getReadingTime } from '../../utils/readingTime';
 
 export async function getStaticPaths() {
   const allArticles = await getCollection('articles');
@@ -24,6 +25,14 @@ const { articles } = Astro.props;
 const sortedArticles = articles.sort(
   (a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf()
 );
+
+// Calculate reading time for each article
+const articlesWithReadingTime = await Promise.all(
+  sortedArticles.map(async (article) => ({
+    ...article,
+    readingTime: await getReadingTime(article)
+  }))
+);
 ---
 
 <BaseLayout 
@@ -41,7 +50,7 @@ const sortedArticles = articles.sort(
     </div>
     
     <div class="grid gap-6 md:grid-cols-2 lg:grid-cols-3">
-      {sortedArticles.map((article) => (
+      {articlesWithReadingTime.map((article) => (
         <ArticleCard
           title={article.data.title}
           description={article.data.description}
@@ -50,6 +59,7 @@ const sortedArticles = articles.sort(
           tags={article.data.tags}
           slug={article.slug}
           image={article.data.image}
+          readingTime={article.readingTime.text}
         />
       ))}
     </div>
